fix width/height spacing (cont)

--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -19788,7 +19788,7 @@
                           <div class="_1kb5zmd">
                             <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Amenities</h2>
                           </div>
-                          <div>
+                          <div style="margin-bottom: 60px !important;">
                             <div class="_aujnou">
                               <div class="_7blh7hl">
                                 <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Special to this farm stay
