add nav mobile version

--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -174,52 +174,7 @@
                                 <div class="page-shell-mobile__container">
                                   <div class="flex-before-after dir dir-ltr" style="">
                                     <div style="--gp-section-max-width: 1120px">
-                                      <div data-plugin-in-point-id="NAV_MOBILE" data-section-id="NAV_MOBILE">
-                                        <div class="nav-mobile">
-
-                                          <div class="_du78a1u">
-                                            <div class="_kv14gss" role="presentation"><a aria-label="Back"
-                                                data-testid="back-button" href="/s/homes" class="_11ml4fm"><span
-                                                  class="_3hmsj">
-                                                  <div class="_1ran6xy">
-                                                    <div><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
-                                                        aria-label="Back" role="img" focusable="false"
-                                                        style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
-                                                        <g fill="none">
-                                                          <path
-                                                            d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932">
-                                                          </path>
-                                                        </g>
-                                                      </svg></div>
-                                                    <div class="_1s0b0yb"></div>
-                                                  </div>
-                                                </span></a></div>
-                                            <div class="_1jdtwz4">
-                                              <div class="_1sstjj60"><button aria-label="Share" type="button"
-                                                  class="_11ml4fm"><span class="_3hmsj"><svg viewBox="0 0 32 32"
-                                                      xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
-                                                      role="presentation" focusable="false"
-                                                      style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
-                                                      <g fill="none">
-                                                        <path d="M27 18v9a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-9"></path>
-                                                        <path d="M16 3v23V3z"></path>
-                                                        <path d="M6 13l9.293-9.293a1 1 0 0 1 1.414 0L26 13"></path>
-                                                      </g>
-                                                    </svg></span></button></div>
-                                              <div><button aria-label="Add listing to a list"
-                                                  data-testid="pdp-save-button-unsaved" type="button"
-                                                  class="_11ml4fm"><span class="_3hmsj"><svg viewBox="0 0 32 32"
-                                                      xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
-                                                      role="presentation" focusable="false"
-                                                      style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
-                                                      <path
-                                                        d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z">
-                                                      </path>
-                                                    </svg></span></button></div>
-                                            </div>
-                                          </div>
-                                        </div>
-                                      </div>
+                                      <div data-plugin-in-point-id="NAV_MOBILE" data-section-id="NAV_MOBILE"><div class="_s8pn9w"><div class="_15xhfd45"><div class="_1o4zwko" role="presentation"><a data-testid="back-button" href="/s/homes" class="_1dxtmbip"><div class="_1ran6xy"><div class="_zzdavs"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4px; overflow: visible;" aria-label="Back" role="img" focusable="false"><g fill="none"><path d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"></path></g></svg></div><div class="_1s0b0yb"><div>Homes</div></div></div></a></div><div class="_1gen4cyn"><div class="_c2acbp"><button aria-label="Share" type="button" class="_oda838"><span class="_e296pg"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2px; overflow: visible;" aria-hidden="true" role="presentation" focusable="false"><g fill="none"><path d="M27 18v9a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-9"></path><path d="M16 3v23V3z"></path><path d="M6 13l9.293-9.293a1 1 0 0 1 1.414 0L26 13"></path></g></svg></span></button></div><div><button aria-label="Add listing to a list" data-testid="pdp-save-button-unsaved" type="button" class="_oda838"><span class="_e296pg"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2px; overflow: visible;" aria-hidden="true" role="presentation" focusable="false"><path d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z"></path></svg></span></button></div></div></div><div></div></div></div>
                                     </div>
                                   </div>
                                   <div class="flex-before-after dir dir-ltr" style="">
