--- a/help/feedback.html
+++ b/help/feedback.html
@@ -6,6 +6,7 @@
     <title>Feedback - Airbnb Help Center</title>
     <link rel="stylesheet" href="../assets/css/global.css" />
     <link rel="stylesheet" href="../assets/css/pages.css" />
+    <link rel="stylesheet" href="../assets/css/ted.css" />
   </head>
   <body>
     <div data-application="true">
