--- a/help/ticket-selection.html
+++ b/help/ticket-selection.html
@@ -6,6 +6,7 @@
     <title>Contact us | Airbnb Help Center</title>
     <link rel="stylesheet" href="../assets/css/global.css" />
     <link rel="stylesheet" href="../assets/css/pages.css" />
+    <link rel="stylesheet" href="../assets/css/ted.css" />
   </head>
   <body>
     <div data-application="true">
@@ -364,32 +365,7 @@
                                         and get you the right kind of help
                                       </div>
                                     </div>
-                                    <div
-                                      style="
-                                        margin-top: 32px;
-                                        margin-bottom: 64px;
-                                      "
-                                    >
-                                      <div>
-                                        <div
-                                          class="inline-block"
-                                          style="
-                                            margin-bottom: 8px;
-                                            margin-right: 8px;
-                                          "
-                                        >
-                                          <button
-                                            type="button"
-                                            class="_13qvio9z"
-                                          >
-                                            Log In
-                                          </button>
-                                        </div>
-                                        <button type="button" class="_dy9aa2k">
-                                          Sign Up
-                                        </button>
-                                      </div>
-                                    </div>
+                                    <div style="margin-top: 32px; margin-bottom: 64px;"><div><div class="_36rlri" style="margin-bottom: 8px; margin-right: 8px;"><button type="button" class="_13qvio9z">Log In</button></div><button type="button" class="_dy9aa2k">Sign Up</button></div></div>
                                     <div class="_s50zru"></div>
                                     <section>
                                       <div
