fix report success modal closing button

--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -27873,7 +27873,7 @@
                         <footer class="modal__footer">
 
                           <button data-testid="flag-primary-button" type="button" class="btn-dark"
-                            style='margin-left:auto !important' id="we-got-your-report-ok">
+                            style='margin-left:auto !important' data-button="close">
                             OK
                           </button>
                         </footer>
@@ -27893,6 +27893,8 @@
       <div aria-live="assertive" aria-atomic="true"></div>
     </div>
   </div>
+
+  <span class="hidden" data-modal="#we-got-your-report-modal"></span>
 
   <!-- calendar modal -->
   <div id="calendar-modal" class="hidden" dir="ltr">
