hide scrollbar in wishlist inline calendar

--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -7972,7 +7972,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="_1ns0ggc">
+                        <div class="_1ns0ggc hidden-scrollbar">
                           <div class="_2f11rw">
                             <div class="_17er5s9">
                               <div class="_udzbwj">
