--- a/payments/payment.html
+++ b/payments/payment.html
@@ -1056,6 +1056,7 @@
                                                       <button
                                                         type="button"
                                                         class="_15rpys7s"
+                                                        data-modal="#price-details-modal"
                                                       >
                                                         More info
                                                       </button>
@@ -11130,6 +11131,119 @@ Thank you very much and we hope you enjoy your stay!</div>
         <div aria-live="assertive" aria-atomic="true"></div>
       </div>
     </div>
+    <div id="price-details-modal" class="hidden" dir="ltr">
+            <div class="modal__backdrop"></div>
+            <section>
+              <div class="modal__container" data-testid="modal-container">
+                <div class="contents">
+                  <div class="container__border-0" aria-hidden="true" tabindex="0"></div>
+                  <div class="contents">
+                    <div role="dialog" aria-modal="true" class="_244p2lw" style="position: relative; max-width: 400px !important">
+                      <div class="modal__close">
+                        <button data-button="close" aria-label="Close" type="button" class="btn-close">
+                          <span class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="
+                                  display: block;
+                                  fill: none;
+                                  height: 16px;
+                                  width: 16px;
+                                  stroke: currentcolor;
+                                  stroke-width: 3;
+                                  overflow: visible;
+                                ">
+                              <path d="m6 6 20 20"></path>
+                              <path d="m26 6-20 20"></path>
+                            </svg></span>
+                        </button>
+                      </div>
+                      <header class="_q8mwh4">
+                      <div class="_1jqox1a"></div>
+                      <div class="_1s09xaf">
+                        <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
+                          <div class="modal__header-text">
+                            <div class="flex-before-after dir dir-ltr" style="">
+                              <div style="--gp-section-max-width: 1120px">
+                                <div data-plugin-in-point-id="EXPLORE_ALL_FILTERS_NAV:TAB_8225" data-section-id="EXPLORE_ALL_FILTERS_NAV:TAB_8225">
+                                  <div class="modal__header-container">
+                                    <div class="modal__header-wrapper"></div>
+                                    <div class="_9t7ktw">
+                                      <div class="modal__header-text">
+                                        Price details
+                                      </div>
+                                    </div>
+                                    <div class="modal__heading-wrapper">
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </h1>
+                      </div>
+                      <div class="_160ra1x"></div>
+                    </header>
+                      
+
+<div class="_12kfhdn">
+  <div class="_gx69ga">
+    <div class="_11jkqip">
+      <div><div class="_1x5uynhu">₱56,615.29 x 2 nights</div></div>
+      <div class="_16d2g85"><span>₱113,230.58</span></div>
+    </div>
+  </div>
+  <div class="_gx69ga">
+    <div class="_11jkqip">
+      <div>
+        <div class="_1x5uynhu">Cleaning fee</div>
+        <div class="_mgk665">
+          <div class="_owkz1m">
+            One-time fee charged by host to cover the cost of cleaning their
+            space.
+          </div>
+        </div>
+      </div>
+      <div class="_16d2g85"><span>₱13,210.24</span></div>
+    </div>
+  </div>
+  <div class="_gx69ga">
+    <div class="_11jkqip">
+      <div>
+        <div class="_1x5uynhu">Service fee</div>
+        <div class="_mgk665">
+          <div class="_owkz1m">
+            This helps us run our platform and offer services like 24/7 support
+            on your trip.
+          </div>
+        </div>
+      </div>
+      <div class="_16d2g85"><span>₱17,850.43</span></div>
+    </div>
+  </div>
+</div>
+
+                      <footer>
+                        <div class="flex-before-after dir dir-ltr" style="">
+                          <div style="--gp-section-max-width: 1120px">
+                            <div data-plugin-in-point-id="COMPOSITE_FILTER_FOOTER_ALL_FILTERS:TAB_8225" data-section-id="COMPOSITE_FILTER_FOOTER_ALL_FILTERS:TAB_8225">
+                              <div class="_kr7m4r">
+                                <footer class="modal__footer">
+                                  <div class="_18rpq8f"><div class="_11jkqip"><div><div class="_1x5uynhu">Total</div></div><div class="_jmeeomk"><span>₱144,291.25</span></div></div></div>
+                                </footer>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </footer>
+                    </div>
+                  </div>
+                  <div class="container__border-0" aria-hidden="true" tabindex="0"></div>
+                </div>
+              </div>
+            </section>
+            <div class="container__border-0">
+              <div aria-live="polite" aria-atomic="true"></div>
+              <div aria-live="assertive" aria-atomic="true"></div>
+            </div>
+          </div>
 
     <script src="../assets/js/components.js"></script>
     <script src="../assets/js/pages/payment.js"></script>
