fix products-luxe gallery modal mobile

--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -232,7 +232,7 @@
                                                 <div class="_1f7hlfr0">
                                                   <div class="_1emsdka"><button
                                                       aria-label="Listing image 1, Show all photos" type="button"
-                                                      class="_1xh26pm2">
+                                                      class="_1xh26pm2" data-modal="#gallery-modal-mobile">
                                                       <div class="_1h6n1zu"
                                                         style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                                                         <picture>
@@ -16115,7 +16115,9 @@
                                                             <div class="_1ilrlnv">
                                                               <div class="_lk9qdq"><button
                                                                   aria-label="Scroll to Exterior" type="button"
-                                                                  class="_11eqlma4">
+                                                                  class="_11eqlma4"
+                                                                  data-scroll="#scrollTo_Exterior"
+                                                                  >
                                                                   <div class="_11z41kk">
                                                                     <div class="_v0gz4uz" role="img" aria-busy="false"
                                                                       aria-label="Exterior image 1"
