fix products plus mobile gallery widths and scrolling

--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -14311,7 +14311,7 @@
                                                         <div class="_c991cpe">
                                                           <div class="_1ilrlnv">
                                                             <div class="_lk9qdq"><button
-                                                                data-scroll="#scrollTo_627033186m"
+                                                                data-scroll="#scrollTo_Living"
                                                                 aria-label="Scroll to Living room" type="button"
                                                                 class="button-container__wrapper">
                                                                 <div class="_11z41kk">
@@ -14653,7 +14653,7 @@
                                           <div data-testid="photo-viewer-section" class="_1xiaz2f5">
                                             <div class="account-container__menu-container">
                                               <div class="_12ifkibl">
-                                                <div id="scrollTo_Living room" class="_4cdkw4">
+                                                <div id="scrollTo_Living" class="_4cdkw4">
                                                   <div class="_le6wlg">
                                                     <div class="wrapper-full max__width dir dir-ltr"
                                                       style="--maxWidth:1120px;">
