rename btn-dark in html files

--- a/become-a-host/location.html
+++ b/become-a-host/location.html
@@ -1311,7 +1311,7 @@
                                    </div>
                                   </div>
                                   <div class="_5tqvll">
-                                   <div class="_1eaes69"><button type="button" class="_1ku51f04">Looks good</button></div>
+                                   <div class="_1eaes69"><button type="button" class="btn-dark">Looks good</button></div>
                                   </div>
                                  </div>
                                 </div>
