--- a/edit/photos.html
+++ b/edit/photos.html
@@ -3501,7 +3501,7 @@
          <footer class="_zgc1p6">
           <div class="_1t0j0qc">
            <div></div>
-           <div class="_jro6t0"><button disabled="" type="submit" class="_1ku51f04">Save</button></div>
+           <div class="_jro6t0"><button disabled="" type="submit" class="btn-dark">Save</button></div>
           </div>
          </footer>
         </div>
