--- a/edit/title.html
+++ b/edit/title.html
@@ -826,7 +826,7 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
                 </ul>
                </div>
                <footer class="_coqiui">
-                <div class="_dt638"><button type="button" class="_1ku51f04">Close</button></div>
+                <div class="_dt638"><button type="button" class="btn-dark">Close</button></div>
                </footer>
                <span id="FMP-target"></span>
               </div>
