--- a/help/feedback.html
+++ b/help/feedback.html
@@ -532,7 +532,7 @@
                                 </div></label
                               >
                             </div>
-                            <button type="button" class="_1ku51f04 share-feedback-btn hidden">
+                            <button type="button" class="btn-dark share-feedback-btn hidden">
                               Submit
                             </button>
                             <div class="e1cinm2u dir dir-ltr"></div>
@@ -574,7 +574,7 @@
                         style="z-index: 9999"
                       >
                         <div class="f1hzn9q9 dir dir-ltr">
-                          <button disabled="" type="button" class="_1ku51f04">
+                          <button disabled="" type="button" class="btn-dark">
                             Submit
                           </button>
                         </div>
