--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -25095,7 +25095,7 @@
                           </div>
                         </div>
                       </div>
-                      <button type="button" class="_1ku51f04">
+                      <button type="button" class="btn-dark">
                         Copy HTML
                       </button>
                       <div class="_ei7ywt hidden">
@@ -29236,7 +29236,7 @@
                                     </div>
                                     <div class="_75d5jt">
                                       <div class=" dir dir-ltr"><button data-testid="homes-pdp-cta-btn" disabled=""
-                                          type="button" class="_1ku51f04">Save</button></div>
+                                          type="button" class="btn-dark">Save</button></div>
                                     </div>
                                   </div>
                                 </div>
