--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -7250,7 +7250,7 @@
                       </header>
                       <div class="_12kfhdn">Are you sure you want to delete Teas?</div>
                       <footer class="_zgc1p6"><button type="button" class="_za4ekfm" data-modal="#setting-modal" data-button="close">Cancel</button><button type="button"
-                          class="_1ku51f04">Yes, delete</button></footer>
+                          class="btn-dark">Yes, delete</button></footer>
                     </div>
                   </div>
                   <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
@@ -7998,7 +7998,7 @@
                         </div>
                       </div>
                       <footer class="_zgc1p6"><button type="button" class="_za4ekfm">Clear</button><button type="button"
-                          class="_1ku51f04">Save</button></footer>
+                          class="btn-dark">Save</button></footer>
                     </div>
                   </div>
                   <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
@@ -8115,7 +8115,7 @@
                         </div>
                       </div>
                       <footer class="_zgc1p6"><button type="button" class="_za4ekfm">Clear</button><button type="button"
-                          class="_1ku51f04">Save</button></footer>
+                          class="btn-dark">Save</button></footer>
                     </div>
                   </div>
                   <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
@@ -8903,7 +8903,7 @@
               </div>
             </div>
             <footer class="_zgc1p6"><button type="button" class="_za4ekfm">Clear</button><button type="button"
-                class="_1ku51f04">Save</button></footer>
+                class="btn-dark">Save</button></footer>
           </div>
         </div>
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
@@ -9035,7 +9035,7 @@
               </div>
             </div>
             <footer class="_zgc1p6"><button type="button" class="_za4ekfm">Clear</button><button type="button"
-                class="_1ku51f04">Save</button></footer>
+                class="btn-dark">Save</button></footer>
           </div>
         </div>
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
@@ -9771,7 +9771,7 @@
               </div>
             </div>
             <footer class="_zgc1p6"><button type="button" class="_za4ekfm">Clear</button><button type="button"
-                class="_1ku51f04">Save</button></footer>
+                class="btn-dark">Save</button></footer>
           </div>
         </div>
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
@@ -9885,7 +9885,7 @@
               </div>
             </div>
             <footer class="_zgc1p6"><button type="button" class="_za4ekfm">Clear</button><button type="button"
-                class="_1ku51f04">Save</button></footer>
+                class="btn-dark">Save</button></footer>
           </div>
         </div>
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
