--- a/payments/payment.html
+++ b/payments/payment.html
@@ -11116,7 +11116,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                         <div class="_pxnjg" id="phone-input-help">We'll text you a code to confirm your number. Standard
                           message and data rates apply.</div>
                       </div>
-                    </div><button type="button" class="_1ku51f04">Continue</button></div>
+                    </div><button type="button" class="btn-dark">Continue</button></div>
                 </div>
               </div>
             </div>
