--- a/payments/service-fee.html
+++ b/payments/service-fee.html
@@ -427,7 +427,7 @@
   <div class="_dj903s">
     <div class="_1787zsai">
       <div class="_si3zpp">
-        <button disabled="" type="button" class="_1ku51f04">
+        <button disabled="" type="button" class="btn-dark">
           <span class="_j1kt73">Save</span>
         </button>
       </div>
@@ -938,7 +938,7 @@
                                                     <button
                                                       disabled=""
                                                       type="button"
-                                                      class="_1ku51f04"
+                                                      class="btn-dark"
                                                     >
                                                       <span class="_j1kt73"
                                                         >Save</span
