--- a/resource-center/article.html
+++ b/resource-center/article.html
@@ -1164,7 +1164,7 @@
                                   </div>
                                 </div>
                                 <div style="margin-bottom:32px">
-                                  <a target="_blank" href="/hosting/listings" class="_1ku51f04">Update your settings</a>
+                                  <a target="_blank" href="/hosting/listings" class="btn-dark">Update your settings</a>
                                 </div>
                                 <div style="margin-bottom:32px">
                                   <div class="_6yye0b">
