--- a/submission/review.html
+++ b/submission/review.html
@@ -1495,7 +1495,7 @@
             </div>
            </div>
            <footer class="_zgc1p6">
-            <div class="_qboyil"><button type="button" class="_1ku51f04">Done</button></div>
+            <div class="_qboyil"><button type="button" class="btn-dark">Done</button></div>
            </footer>
           </div>
          </div>
@@ -1554,7 +1554,7 @@
             </div>
            </div>
            <footer class="_zgc1p6">
-            <div class="_qboyil"><button type="button" class="_1ku51f04">Done</button></div>
+            <div class="_qboyil"><button type="button" class="btn-dark">Done</button></div>
            </footer>
           </div>
          </div>
@@ -1630,7 +1630,7 @@
             </div>
            </div>
            <footer class="_zgc1p6">
-            <div class="_qboyil"><button type="button" class="_1ku51f04">Done</button></div>
+            <div class="_qboyil"><button type="button" class="btn-dark">Done</button></div>
            </footer>
           </div>
          </div>
