--- a/submission/title.html
+++ b/submission/title.html
@@ -1296,7 +1296,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
                 </ul>
                </div>
                <footer class="_coqiui">
-                <div class="_dt638"><button type="button" class="_1ku51f04">Close</button></div>
+                <div class="_dt638"><button type="button" class="btn-dark">Close</button></div>
                </footer>
                <span id="FMP-target"></span>
               </div>
