--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -11123,7 +11123,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       <div class="_1hmisy6">Contact Kat for dates and times not listed,
                                                         or if you want to book for a larger group.<div class="_1vk19cb">
                                                           <a href="/experiences/3134396?currentTab=experience_tab&amp;federatedSearchId=980d5071-b471-463d-8db8-77c0c27bf75e&amp;searchId=f9cea4e8-a387-4f32-8a6a-7fb61adec6e2&amp;sectionId=00d92247-d2bf-4f39-96ee-2fcdea1649a6&amp;source=p2&amp;modal=LEGACY_CONTACT_HOST&amp;modalItem=select_booking_type"
-                                                            class="_1ku51f04">Request availability</a>
+                                                            class="btn-dark">Request availability</a>
                                                         </div>
                                                       </div>
                                                     </div>
