--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -17731,7 +17731,7 @@
                                   </div>
                                   <div class="_75d5jt">
                                     <div class=" dir dir-ltr"><button data-testid="homes-pdp-cta-btn" disabled=""
-                                        type="button" class="_1ku51f04">Save</button></div>
+                                        type="button" class="btn-dark">Save</button></div>
                                   </div>
                                 </div>
                               </div>
