--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -2397,7 +2397,7 @@
                           <div data-testid="filters-footer" class="_1fc5ti">
                             <footer class="_zgc1p6">
                               <button type="button" class="_za4ekfm">Clear</button>
-                              <button type="button" class="_1ku51f04">Apply</button>
+                              <button type="button" class="btn-dark">Apply</button>
                             </footer>
                           </div>
                         </div>
@@ -2495,7 +2495,7 @@
                           <div data-testid="filters-footer" class="_1fc5ti">
                             <footer class="_zgc1p6">
                               <button type="button" class="_za4ekfm">Clear</button>
-                              <button type="button" class="_1ku51f04">Select</button>
+                              <button type="button" class="btn-dark">Select</button>
                             </footer>
                           </div>
                         </div>
