--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -3784,7 +3784,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
               <div data-plugin-in-point-id="CONCEPT_REFINEMENT_0_FOOTER" data-section-id="CONCEPT_REFINEMENT_0_FOOTER" style="padding-top: 16px; padding-bottom: 16px;">
                <div class="c1sjhfzr t1pii32p dir dir-ltr">
                 <div class="c1yo0219 dir dir-ltr">
-                 <div data-plugin-in-point-id="CONCEPT_REFINEMENT_0_NEXT_BUTTON" data-section-id="CONCEPT_REFINEMENT_0_NEXT_BUTTON" style="display: contents;"><button type="button" class="_1ku51f04">Next</button></div>
+                 <div data-plugin-in-point-id="CONCEPT_REFINEMENT_0_NEXT_BUTTON" data-section-id="CONCEPT_REFINEMENT_0_NEXT_BUTTON" style="display: contents;"><button type="button" class="btn-dark">Next</button></div>
                 </div>
                </div>
               </div>
@@ -4011,7 +4011,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                 <footer class="_zgc1p6">
                  <div class="b6k43rf dir dir-ltr"></div>
                  <div class="b6k43rf dir dir-ltr">
-                  <div class="tta0hoe dir dir-ltr"><button type="button" class="_1ku51f04">Close</button></div>
+                  <div class="tta0hoe dir dir-ltr"><button type="button" class="btn-dark">Close</button></div>
                  </div>
                 </footer>
                </div>
