--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -11269,7 +11269,7 @@
                                                                           </div>
                                                                           <div class="_1jdtwz4"><button
                                                                               data-button="close" type="button"
-                                                                              class="_za4ekfm">Close</button></div>
+                                                                              class="btn-link">Close</button></div>
                                                                         </div>
                                                                       </div>
                                                                     </div>
@@ -27476,7 +27476,7 @@
                   </li>
                 </ul>
                 <footer class="_7i2ej1"><button data-button="close" aria-label="Close the shortcuts panel" type="button"
-                    class="_za4ekfm">Back
+                    class="btn-link">Back
                     to calendar</button></footer>
               </div>
             </div>
