--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -7249,7 +7249,7 @@
                         <div class="_rrmdgl"></div>
                       </header>
                       <div class="_12kfhdn">Are you sure you want to delete Teas?</div>
-                      <footer class="_zgc1p6"><button type="button" class="_za4ekfm" data-modal="#setting-modal" data-button="close">Cancel</button><button type="button"
+                      <footer class="_zgc1p6"><button type="button" class="btn-link" data-modal="#setting-modal" data-button="close">Cancel</button><button type="button"
                           class="btn-dark">Yes, delete</button></footer>
                     </div>
                   </div>
@@ -7997,7 +7997,7 @@
                           </div>
                         </div>
                       </div>
-                      <footer class="_zgc1p6"><button type="button" class="_za4ekfm">Clear</button><button type="button"
+                      <footer class="_zgc1p6"><button type="button" class="btn-link">Clear</button><button type="button"
                           class="btn-dark">Save</button></footer>
                     </div>
                   </div>
@@ -8114,7 +8114,7 @@
                           </div>
                         </div>
                       </div>
-                      <footer class="_zgc1p6"><button type="button" class="_za4ekfm">Clear</button><button type="button"
+                      <footer class="_zgc1p6"><button type="button" class="btn-link">Clear</button><button type="button"
                           class="btn-dark">Save</button></footer>
                     </div>
                   </div>
@@ -8902,7 +8902,7 @@
                 </div>
               </div>
             </div>
-            <footer class="_zgc1p6"><button type="button" class="_za4ekfm">Clear</button><button type="button"
+            <footer class="_zgc1p6"><button type="button" class="btn-link">Clear</button><button type="button"
                 class="btn-dark">Save</button></footer>
           </div>
         </div>
@@ -9034,7 +9034,7 @@
                 </div>
               </div>
             </div>
-            <footer class="_zgc1p6"><button type="button" class="_za4ekfm">Clear</button><button type="button"
+            <footer class="_zgc1p6"><button type="button" class="btn-link">Clear</button><button type="button"
                 class="btn-dark">Save</button></footer>
           </div>
         </div>
@@ -9770,7 +9770,7 @@
                 </div>
               </div>
             </div>
-            <footer class="_zgc1p6"><button type="button" class="_za4ekfm">Clear</button><button type="button"
+            <footer class="_zgc1p6"><button type="button" class="btn-link">Clear</button><button type="button"
                 class="btn-dark">Save</button></footer>
           </div>
         </div>
@@ -9884,7 +9884,7 @@
                 </div>
               </div>
             </div>
-            <footer class="_zgc1p6"><button type="button" class="_za4ekfm">Clear</button><button type="button"
+            <footer class="_zgc1p6"><button type="button" class="btn-link">Clear</button><button type="button"
                 class="btn-dark">Save</button></footer>
           </div>
         </div>
