--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -2396,7 +2396,7 @@
                         <div data-plugin-in-point-id="INBOX_FILTERS_FOOTER" data-section-id="INBOX_FILTERS_FOOTER">
                           <div data-testid="filters-footer" class="_1fc5ti">
                             <footer class="_zgc1p6">
-                              <button type="button" class="_za4ekfm">Clear</button>
+                              <button type="button" class="btn-link">Clear</button>
                               <button type="button" class="btn-dark">Apply</button>
                             </footer>
                           </div>
@@ -2494,7 +2494,7 @@
                         <div data-plugin-in-point-id="INBOX_LISTING_PICKER_FOOTER" data-section-id="INBOX_LISTING_PICKER_FOOTER">
                           <div data-testid="filters-footer" class="_1fc5ti">
                             <footer class="_zgc1p6">
-                              <button type="button" class="_za4ekfm">Clear</button>
+                              <button type="button" class="btn-link">Clear</button>
                               <button type="button" class="btn-dark">Select</button>
                             </footer>
                           </div>
