--- a/online-experience/insights.html
+++ b/online-experience/insights.html
@@ -3774,7 +3774,7 @@
              </div>
             </fieldset>
            </div>
-           <footer class="_zgc1p6"><button type="button" class="_za4ekfm">Clear</button><button type="button" class="btn-dark">Apply</button></footer>
+           <footer class="_zgc1p6"><button type="button" class="btn-link">Clear</button><button type="button" class="btn-dark">Apply</button></footer>
           </div>
          </div>
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
