--- a/listings-product/contact-host-message.html
+++ b/listings-product/contact-host-message.html
@@ -287,7 +287,7 @@
                                                       <div>Dates</div>
                                                       <a
                                                         href="/contact_host/16354372/send_message/SEND_MESSAGE?modal=CALENDAR"
-                                                        class="_za4ekfm"
+                                                        class="btn-link"
                                                         ><div class="_140n9qh">
                                                           Add dates for accurate
                                                           pricing
@@ -303,7 +303,7 @@
                                                       <div>Guests</div>
                                                       <a
                                                         href="/contact_host/16354372/send_message/SEND_MESSAGE?modal=GUEST_PICKER"
-                                                        class="_za4ekfm"
+                                                        class="btn-link"
                                                         ><div class="_140n9qh">
                                                           1 guest
                                                         </div></a
